--- a/src/NSwag.CodeGeneration.Tests/NSwag.CodeGeneration.Tests.csproj
+++ b/src/NSwag.CodeGeneration.Tests/NSwag.CodeGeneration.Tests.csproj
@@ -25,6 +25,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\NSwag.CodeGeneration.Tests.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -74,12 +75,9 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AssemblyTypeToSwaggerGeneratorTests.cs" />
-    <Compile Include="ClientGeneration\ArrayParameterTests.cs" />
-    <Compile Include="ClientGeneration\FormParameterTests.cs" />
-    <Compile Include="CodeGenerationTests.cs" />
     <Compile Include="CommandLine\WebApiCommandLineTests.cs" />
-    <Compile Include="OperationNameGenerator\MultipleClientsFromOperationIdOperationNameGeneratorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebApiToSwaggerGenerator\Attributes\BindedTests.cs" />
     <Compile Include="WebApiToSwaggerGenerator\Attributes\AcceptVerbsTests.cs" />
     <Compile Include="WebApiToSwaggerGenerator\Attributes\ComplexParametersTests.cs" />
     <Compile Include="WebApiToSwaggerGenerator\Attributes\PrimitivePathParametersTests.cs" />
@@ -88,9 +86,9 @@
     <Compile Include="WebApiToSwaggerGenerator\GeneralTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\NSwag.AssemblyLoader\NSwag.AssemblyLoader.csproj">
-      <Project>{46634c60-ba7d-43e6-9049-6ad461488c39}</Project>
-      <Name>NSwag.AssemblyLoader</Name>
+    <ProjectReference Include="..\NSwag.Annotations\NSwag.Annotations.csproj">
+      <Project>{ca084154-e758-4a44-938d-7806af2dd886}</Project>
+      <Name>NSwag.Annotations</Name>
     </ProjectReference>
     <ProjectReference Include="..\NSwag.CodeGeneration\NSwag.CodeGeneration.csproj">
       <Project>{75B3F91D-687E-4FB3-AD45-CCFA3C406DB4}</Project>
