--- a/src/NSwag.Core/NSwag.Core.csproj
+++ b/src/NSwag.Core/NSwag.Core.csproj
@@ -57,7 +57,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collections\ObservableDictionary.cs" />
+    <Compile Include="Documentation.cs" />
     <Compile Include="HttpUtilities.cs" />
+    <Compile Include="Interfaces\IDocumentationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SwaggerContact.cs" />
     <Compile Include="SwaggerExternalDocumentation.cs" />
