--- a/src/NSwag.Annotations/Stucco.NSwag.Annotations.csproj
+++ b/src/NSwag.Annotations/Stucco.NSwag.Annotations.csproj
@@ -35,7 +35,7 @@
     <DocumentationFile>bin\Release\Stucco.NSwag.Annotations.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>../NSwag.snk</AssemblyOriginatorKeyFile>
